Fixing some broken layout in header

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,9 +16,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-.error {
+.center {
   text-align: center;
-  padding: 1px;
-  border-bottom: 1px solid red;
-  border-radius: 20px;
 }
